# wallpaper-changer-windows

./: .gitignore  README.md  installer.iss  main.py  pyproject.toml  wallpaper_changer.spec
.github/: copilot-instructions.md
config/: settings.toml  state.json  transparency.json
docs/: CNAME  index.html
docs/css/: style.css
docs/js/: main.js
scripts/: build_exe.ps1
src/wallpaper_changer/: __init__.py  cli.py  config.py  gui.py  hotkeys.py  i18n.py  image_utils.py  monitor.py  startup.py  transparency.py  transparency_gui.py  wallpaper.py
tasks/: lessons.md  todo.md
tests/: test_image_utils.py
