[project]
name = "wallpaper-changer"
version = "3.0.0"
description = "Wallpaper changer for Windows 11 with split-screen and random modes"
requires-python = ">=3.11"
dependencies = [
    "Pillow>=10.0.0",
    "pywin32>=306",
    "pystray>=0.19.5",
    "schedule>=1.2.1",
    "click>=8.1.7",
    "screeninfo>=0.8.1",
    "ttkbootstrap>=1.20.1",
    "keyboard>=0.13.5",
    "pynput>=1.7.6",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.0",
]

[project.scripts]
wallpaper-changer     = "wallpaper_changer.cli:main"
wallpaper-changer-gui = "wallpaper_changer.gui:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wallpaper_changer"]

[tool.ruff.lint]
preview = true
select = ['I', 'E', 'W', 'PL', 'PT']